@@ -20,6 +20,11 @@ Changes in 0.60.1:
     to be installed.
   * Committing troves to the repository no longer recompresses non-config
     files
+  * Timestamps are set on the server at commit time; the timestamps the 
+    client assigned is not used (this is to protect against clients with
+    a bad idea of time; servers should be consistent, even if they're
+    wrong, and as long as time doesn't go backwards on that server all is
+    good)
 
 Changes in 0.60.0:
   * Changed changesets to compress individual files instead of the combined
